GLTFLoader: Implement KHR_materials_clearcoat extension.

--- a/examples/webgl_loader_gltf_extensions.html
+++ b/examples/webgl_loader_gltf_extensions.html
@@ -34,6 +34,15 @@
 			var clock = new THREE.Clock();
 
 			var scenes = {
+				'Clearcoat Test': {
+					name: 'Clearcoat Test',
+					url: './models/gltf/ClearcoatTest/ClearcoatTest.glb',
+					author: 'Ed Mackey (Analytical Graphics, Inc.)',
+					authorURL: 'https://www.agi.com/',
+					cameraPos: new THREE.Vector3( 0, 0, 20 ),
+					extensions: [ 'glTF' ],
+					addEnvMap: true
+				},
 				Boombox: {
 					name: 'BoomBox (PBR)',
 					url: './models/gltf/BoomBox/%s/BoomBox.gltf',
