--- a/examples/webgl_loader_texture_basis.html
+++ b/examples/webgl_loader_texture_basis.html
@@ -50,10 +50,12 @@
 				var loader = new BasisTextureLoader();
 				loader.setTranscoderPath( 'js/libs/basis/' );
 				loader.detectSupport( renderer );
-				loader.load( 'textures/compressed/PavingStones.basis', function ( texture ) {
+				loader.load( 'textures/compressed/logo-ps.basis', function ( texture ) {
 
 					texture.encoding = THREE.sRGBEncoding;
 					material.map = texture;
+					material.alphaTest = 0.2;
+					material.side = THREE.DoubleSide;
 					material.needsUpdate = true;
 
 				}, undefined, function ( error ) {
